Commit 12/09/2025